--- a/index.html
+++ b/index.html
@@ -24,28 +24,35 @@
   <a href="assets/Justin_Rzepko_Resume.pdf" target="_blank" rel="noopener">Resumé</a>
 </nav>
 
-<!-- About -->
 <section id="about" class="section">
   <div class="about-card">
     <img class="headshot" src="assets/images/IMG_2364.jpg" alt="Photo of Justin Rzepko">
     <div class="about-copy">
-      <h2>About Me</h2>
+
+      <!-- Title + subtle GPA chip -->
+      <div class="title-row">
+        <h2>About Me</h2>
+        <span class="chip chip-accent" aria-label="GPA 4.0">GPA&nbsp;4.0</span>
+      </div>
+
       <p>
         I’m a software engineer focused on building clean, reliable web apps and data-driven features.
         I enjoy fast feedback loops, solid fundamentals, and shipping things that feel polished.
       </p>
       <ul class="about-list">
-        <li>Currently: CS @ SCSU, TA, ML + full-stack projects</li>
+        <li>Currently: CS @ SCSU (GPA 4.0), TA, ML + full-stack projects</li>
         <li>Stack: Python, Django/DRF, React, PostgreSQL, AWS</li>
         <li>Interests: ML for recommendations, clean UX, developer tooling</li>
       </ul>
+
       <div class="about-ctas">
         <a class="btn" href="mailto:rzepkojustin@gmail.com">Email me</a>
-        <a class="btn ghost" href="assets/Justin_Rzepko_Resume.pdf" target="_blank" rel="noopener">View Resumé</a>
+        <a class="btn ghost" href="assets/Justin_Rzepko_Resume.pdf" target="_blank" rel="noopener">View Résumé</a>
       </div>
     </div>
   </div>
 </section>
+
 
   <section class="carousel" aria-label="Skill cards carousel">
     <button class="control prev" aria-label="Previous card" title="Previous">&#60;</button>
