--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!-- Quick nav (optional but nice) -->
 <nav class="top-nav" aria-label="Primary">
   <a href="#about">About</a>
+  <a href="#internships">Experience</a>
   <a href="#projects">Projects</a>
   <a href="assets/Justin_Rzepko_Resume.pdf" target="_blank" rel="noopener">Resumé</a>
 </nav>
@@ -108,6 +109,57 @@
     <button class="control next" aria-label="Next card" title="Next">&#62;</button>
     <p class="hint">Hint: swipe or use ◀ ▶ to rotate</p>
   </section>
+  <p class="hint" style="margin-top:6px;">
+  <a href="#internships" style="color:var(--accent); text-decoration:none;">See Experience ↓</a>
+</p>
+
+
+  <section id="internships" class="section">
+  <h2 class="section-title">Experience</h2>
+
+  <div class="exp-list">
+    <!-- Internship 1 -->
+    <article class="exp">
+      <img class="exp-logo" src="assets/companies/acme.svg" alt="Acme Health logo" onerror="this.style.display='none'">
+      <div class="exp-body">
+        <div class="exp-top">
+          <h3 class="exp-role">Google Software Engineering Program</h3>
+          <span class="exp-dates">January 2025 – May 2025 · Remote</span>
+        </div>
+        <p class="exp-summary">
+          10-week Google SWE mentorship focused on DS&A, pair programming, and code reviews.
+        </p>
+        <ul class="exp-points">
+          <li>Selected for a competitive 10-week 1:1 mentorship with a Google Software Engineer; completed weekly pair-programming sessions and code reviews.</li>
+          <li>Participated in team-based coding challenges, strengthening communication and collaboration skills.</li>
+          <li>Developed and optimized algorithms in Python to solve real-world coding problems.</li>
+        </ul>
+        <ul class="tags"><li>Python</li></ul>
+      </div>
+    </article>
+
+    <!-- Internship 2 -->
+    <article class="exp">
+      <img class="exp-logo" src="assets/companies/contoso.svg" alt="Contoso logo" onerror="this.style.display='none'">
+      <div class="exp-body">
+        <div class="exp-top">
+          <h3 class="exp-role">Teacher's Assistant · SCSU</h3>
+          <span class="exp-dates">January 2025 – Present · New Haven, CT</span>
+        </div>
+        <p class="exp-summary">
+          CS TA—labs, office hours, grading, and targeted coding feedback.
+        </p>
+        <ul class="exp-points">
+          <li>Evaluated and graded assignments, projects, and exams for undergraduate Computer Science courses with accuracy and attention to detail.</li>
+          <li>Provided constructive feedback to students to support their understanding of course material and improve their coding and problem-solving skills.</li>
+          <li>Collaborated with course instructors to clarify grading criteria and ensure fair evaluation of student work.</li>
+        </ul>
+        <ul class="tags"><li>Blackboard</li></ul>
+      </div>
+    </article>
+  </div>
+</section>
+
 
   <!-- Projects -->
 <section id="projects" class="section">
