--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
     <nav class="footer-links" aria-label="Footer">
       <a href="mailto:rzepkojustin@gmail.com">Email</a>
       <!-- Swap these with your real profiles when ready -->
-      <a href="https://github.com/yourhandle" target="_blank" rel="noopener">GitHub</a>
-      <a href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
+      <a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
     </nav>
 
     <div class="footer-right">
