--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <a href="#about">About</a>
   <a href="#internships">Experience</a>
   <a href="#projects">Projects</a>
-  <a href="assets/UPDATEDRESUMEJUSTIN.pdf" target="_blank" rel="noopener">Resumé</a>
+  <a href="assets/UPDATEDRESUMEJUSTIN.pdf" target="_blank" rel="noopener">Résumé</a>
 </nav>
 
 <section id="about" class="section">
@@ -91,6 +91,9 @@
           <li><img alt="" src="assets/icons/django.svg"> Django / DRF</li>
           <li><img alt="" src="assets/icons/postgresql.svg"> PostgreSQL</li>
           <li><img alt="" src="assets/icons/docker.svg"> Docker</li>
+          <li><img alt="" src="assets/icons/flask.svg"> Flask</li>
+          
+
         </ul>
       </article>
 
