--- a/index.html
+++ b/index.html
@@ -9,13 +9,97 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Construction Banner -->
+  <style>
+  @keyframes fadeOutUp {
+    0% {
+      opacity: 1;
+      transform: translate(-50%, 0);
+    }
+    100% {
+      opacity: 0;
+      transform: translate(-50%, -12px);
+    }
+  }
+
+  .fade-out-banner {
+    animation: fadeOutUp 0.35s ease forwards;
+  }
+</style>
+
+
 </head>
+
 <body>
+
+    <!-- Construction Banner -->
+<style>
+  body {
+    padding-top: 70px; /* adjust to taste: 60–90px works well */
+  }
+</style>
+
+<div id="construction-banner" style="
+  position: fixed;
+  top: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 95%;
+  max-width: 900px;
+  padding: 12px 20px;
+  background: rgba(255, 226, 140, 0.12);
+  border: 1px solid rgba(255, 226, 140, 0.28);
+  border-radius: 12px;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  display: flex;
+  align-items: center;
+  justify-content: center; /* center contents */
+  gap: 10px;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+  color: #f6e8b7;
+  font-size: 15px;
+  font-weight: 400;
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35);
+  z-index: 9999;
+">
+  <div style="display:flex; align-items:center; gap:10px; text-align: center;">
+    <span style="font-size: 16px; opacity: 0.9;">⚡</span>
+    <span><strong style="font-weight: 600;">Website Under Construction</strong> — Check back soon.</span>
+  </div>
+
+  <button id="dismiss-banner" style="
+  position: absolute;
+  right: 14px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  color: #ff6b6b;
+  font-size: 22px; /* ← increased from 18px to 22px */
+  cursor: pointer;
+  opacity: 0.75;
+  transform-origin: center;
+  transition: opacity 0.25s ease, transform 0.25s ease;
+"
+onmouseover="this.style.opacity='1'; this.style.transform='translateY(-50%) scale(1.12)';"
+onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) scale(1)';"
+>×</button>
+
+
+</div>
+
+
+
+
+
 
   <header>
     <h1>Justin Rzepko</h1>
     <p>Software Engineer • ML • Web — <a href="mailto:rzepkojustin@gmail.com">rzepkojustin@gmail.com</a></p>
   </header>
+  
 
   <!-- Quick nav (optional but nice) -->
 <nav class="top-nav" aria-label="Primary">
@@ -249,5 +333,23 @@
 </footer>
 
   <script src="main.js" defer></script>
+
+  <!-- Construction Banner -->
+<script>
+  const banner = document.getElementById("construction-banner");
+  const dismissBtn = document.getElementById("dismiss-banner");
+
+  dismissBtn.addEventListener("click", () => {
+    banner.classList.add("fade-out-banner");
+    setTimeout(() => {
+      banner.style.display = "none";
+    }, 350); // match animation duration
+  });
+</script>
+
+
+
+
+
 </body>
 </html>
