--- a/index.html
+++ b/index.html
@@ -256,26 +256,7 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
     <!-- Project card -->
     <article class="project">
       <div class="project-media">
-        <img src="assets/projects/edaters-thumb.jpg" alt="eDaters matchmaking platform screenshot">
-      </div>
-      <div class="project-body">
-        <h3>eDaters — Matchmaking Platform</h3>
-        <p>
-          Full-stack web app for interest-based matchmaking. Role: lead dev (frontend + backend + infra).
-        </p>
-        <ul class="tags">
-          <li>Angular</li><li>Django/DRF</li><li>PostgreSQL</li><li>AWS</li>
-        </ul>
-        <div class="actions">
-          <a class="btn" href="#" target="_blank" rel="noopener">Live</a>
-          <a class="btn ghost" href="#" target="_blank" rel="noopener">Code</a>
-        </div>
-      </div>
-    </article>
-
-    <article class="project">
-      <div class="project-media">
-        <img src="assets/projects/workflow-thumb.jpg" alt="Workflow system screenshot">
+        <img src="assets/projects/admindashupdated.png" alt="Workflow system screenshot">
       </div>
       <div class="project-body">
         <h3>Request Workflow System</h3>
