--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
           <span class="exp-dates">January 2025 – May 2025 · Remote</span>
         </div>
         <p class="exp-summary">
+            
           10-week Google SWE mentorship focused on DS&A, pair programming, and code reviews.
         </p>
         <ul class="exp-points">
@@ -224,6 +225,30 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
         <ul class="tags"><li>Python</li></ul>
       </div>
     </article>
+
+    <!-- Experience 3 -->
+<article class="exp">
+  <img class="exp-logo" src="assets/companies/buenavista.svg" alt="BuenaVista Information Systems logo" onerror="this.style.display='none'">
+  <div class="exp-body">
+    <div class="exp-top">
+      <h3 class="exp-role">IT Support and Development</h3>
+      <span class="exp-dates">October 2025 – Present · North Charleston, SC</span>
+    </div>
+    <p class="exp-summary">
+      IT support and automation development within managed service provider (MSP) environments.
+    </p>
+    <ul class="exp-points">
+  <li>Automated repetitive workflows using <strong>Python</strong> and <strong>Power Automate</strong>, improving technician throughput.</li>
+  <li>Authored <strong>SOPs</strong> and documentation for scalable IT processes.</li>
+  <li>Reduced recurring service desk task time by <strong>~3–6 minutes</strong> per request through automation.</li>
+  <li>Identified workflow bottlenecks and proposed efficiency optimizations.</li>
+</ul>
+    <ul class="tags">
+      <li>Python</li><li>Power Automate</li>
+    </ul>
+  </div>
+</article>
+
 
     <!-- Internship 2 -->
     <article class="exp">
@@ -267,8 +292,7 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
           <li>Flask</li><li>SQLAlchemy</li><li>GCP</li><li>Docker</li>
         </ul>
         <div class="actions">
-          <a class="btn" href="#" target="_blank" rel="noopener">Live</a>
-          <a class="btn ghost" href="#" target="_blank" rel="noopener">Code</a>
+          <a class="btn ghost" href="https://github.com/Jrezz/Request-Workflow" target="_blank" rel="noopener">Code</a>
         </div>
       </div>
     </article>
@@ -278,7 +302,7 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
         <img src="assets/projects/ml-thumb.png" alt="Health Insights report cover">
       </div>
       <div class="project-body">
-        <h3>Health Insights (ML)</h3>
+        <h3>Health Insights</h3>
         <p>
           Regression + classification experiments exploring health metrics, feature engineering, and evaluation.
         </p>
@@ -287,7 +311,7 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
         </ul>
         <div class="actions">
   <a class="btn" href="pages/report-health-insights.html">Report</a>
-  <a class="btn ghost" href="#" target="_blank" rel="noopener">Code</a>
+  <a class="btn ghost" href="pages/health-insights-code.html" target="_blank" rel="noopener">Code</a>
 </div>
       </div>
     </article>
