--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
 
       <div class="about-ctas">
         <a class="btn" href="mailto:rzepkojustin@gmail.com">Email me</a>
-        <a class="btn ghost" href="assets/UPDATEDRESUMEJUSTIN.pdf" target="_blank" rel="noopener">View Résumé</a>
+        <a class="btn ghost" href="assets/Rzepko_RES.pdf" target="_blank" rel="noopener">View Résumé</a>
       </div>
     </div>
   </div>
