--- a/index.html
+++ b/index.html
@@ -33,68 +33,6 @@
 
 <body>
 
-    <!-- Construction Banner -->
-<style>
-  body {
-    padding-top: 70px; /* adjust to taste: 60–90px works well */
-  }
-</style>
-
-<div id="construction-banner" style="
-  position: fixed;
-  top: 16px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 95%;
-  max-width: 900px;
-  padding: 12px 20px;
-  background: rgba(255, 226, 140, 0.12);
-  border: 1px solid rgba(255, 226, 140, 0.28);
-  border-radius: 12px;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  display: flex;
-  align-items: center;
-  justify-content: center; /* center contents */
-  gap: 10px;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-  color: #f6e8b7;
-  font-size: 15px;
-  font-weight: 400;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35);
-  z-index: 9999;
-">
-  <div style="display:flex; align-items:center; gap:10px; text-align: center;">
-    <span style="font-size: 16px; opacity: 0.9;">⚡</span>
-    <span><strong style="font-weight: 600;">Website Under Construction</strong> — Check back soon.</span>
-  </div>
-
-  <button id="dismiss-banner" style="
-  position: absolute;
-  right: 14px;
-  top: 50%;
-  transform: translateY(-50%);
-  background: none;
-  border: none;
-  color: #ff6b6b;
-  font-size: 22px; /* ← increased from 18px to 22px */
-  cursor: pointer;
-  opacity: 0.75;
-  transform-origin: center;
-  transition: opacity 0.25s ease, transform 0.25s ease;
-"
-onmouseover="this.style.opacity='1'; this.style.transform='translateY(-50%) scale(1.12)';"
-onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) scale(1)';"
->×</button>
-
-
-</div>
-
-
-
-
-
-
   <header>
     <h1>Justin Rzepko</h1>
     <p>Software Engineer • ML • Web — <a href="mailto:rzepkojustin@gmail.com">rzepkojustin@gmail.com</a></p>
@@ -121,13 +59,13 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
       </div>
 
       <p>
-        I’m a software engineer focused on building clean, reliable web apps and data-driven features.
-        I enjoy fast feedback loops, solid fundamentals, and shipping things that feel polished.
+        I’m a software engineer specializing in full-stack development and machine learning systems. 
+        I focus on building maintainable, scalable, and efficient applications.
       </p>
       <ul class="about-list">
         <li>Currently: CS @ SCSU (GPA 4.0), TA, ML + full-stack projects</li>
         <li>Stack: Python, Django/DRF, React, PostgreSQL, AWS</li>
-        <li>Interests: ML for recommendations, clean UX, developer tooling</li>
+        <li>Interests: ML systems, UX design, dev tools</li>
       </ul>
 
       <div class="about-ctas">
@@ -338,22 +276,6 @@ onmouseout="this.style.opacity='0.75'; this.style.transform='translateY(-50%) sc
 </footer>
 
   <script src="main.js" defer></script>
-
-  <!-- Construction Banner -->
-<script>
-  const banner = document.getElementById("construction-banner");
-  const dismissBtn = document.getElementById("dismiss-banner");
-
-  dismissBtn.addEventListener("click", () => {
-    banner.classList.add("fade-out-banner");
-    setTimeout(() => {
-      banner.style.display = "none";
-    }, 350); // match animation duration
-  });
-</script>
-
-
-
 
 
 </body>
